Created a main page and basic style of main page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <p class="hint">Choose wisely. The realm remembers.</p>
 
     <div class="topics">
-        <div class="topic red">Aliens</div>
+        <div class="topic red" id="al">Aliens</div>
         <div class="topic blue">Earth Mysteries</div>
         <div class="topic red">Lost History</div>
 
