Added new font for main page and linked index to main page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div class="container">
 
     <h1 class="title">THE REALM OF LOST LORES</h1>
-    <h2 class="subtitle">Select any <span>5</span> topics</h2>
+    <h2 class="subtitle">Select any <span>3</span> topics</h2>
     <p class="hint">Choose wisely. The realm remembers.</p>
 
     <div class="topics">
@@ -35,9 +35,9 @@
         <div class="topic gray">Unknown Signals</div>
     </div>
 
-    <div class="counter">0 / 5 tuned</div>
+    <div class="counter">0 / 3 tuned</div>
 
-    <button class="enter-btn" disabled>Enter the Realm</button>
+    <button class="enter-btn" >Enter the Realm</button>
 
 </div>
 
