Added logo and created an folder (assets)

--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
     <!-- NAVBAR / HEADER-->
     <header class="navbar">
         <div class="logo">
-            <span class="logo-icon">R</span>
+            <img class="logo-icon" src="assets/logo.jpeg", alt="Logo">
             <span class="logo-text">THE REALM OF LOST LORES</span>
         </div>
         <nav>
