Added backgorund and some theories

--- a/main.html
+++ b/main.html
@@ -6,6 +6,8 @@
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500;700&family=Inter&display=swap" rel="stylesheet">
+    <!-- jQuery CDN -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <!-- CSS -->
     <link rel="stylesheet" href="main_s.css">
 </head>
@@ -23,6 +25,7 @@
         </nav>
         <input type="text" placeholder="Search" class="search-box">
     </header>
+    <div class="divider horizontal"></div>
     <!-- MAIN LAYOUT -->
     <div class="container">
         <!-- SIDEBAR -->
@@ -32,13 +35,15 @@
             <a href="#">Human Origin</a>
             <a href="#">See All</a>
         </aside>
+        <div class="divider vertical"></div>
         <!-- CONTENT -->
         <main class="content">
-            <div class="card red-glow">Theory - 1</div>
-            <div class="card blue-glow">Theory - 2</div>
+            <!-- <div class="card red-glow">Theory - 1</div>
+            <div class="card blue-glow">Theory - 2</div> -->
         </main>
     </div>
     <!-- ADD BUTTON -->
     <div class="add-btn">+</div>
+    <script src="script_m.js"></script>
 </body>
 </html>
